[tool.poetry]
name = "weatherflow_openapi"
version = "1.0.0"
description = "WeatherFlow Tempest API"
authors = ["OpenAPI Generator Community <jforare@weatherflow.com>", "Jeff Stein <jeffstein@gmail.com>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/jeeftor/Weatherflow-OpenApi-Python"
keywords = ["OpenAPI", "OpenAPI-Generator", "WeatherFlow Tempest API"]
include = ["weatherflow_openapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
